// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Common Link with cssMiskLink can render 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #cecece;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="emotion-0"
    href="/link/path/"
  />
</DocumentFragment>
`;

exports[`Navbar Common MiskNavbarHeading can render 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 24px!important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.emotion-0 a {
  color: #cecece!important;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white!important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Navbar Common MiskNavbarHeadingEnvironment can render 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 24px!important;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 0px;
  margin-right: 30px;
  color: #cecece;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  color: #49a4d5!important;
  min-width: 0;
}

.emotion-0 a {
  color: #cecece!important;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  color: white!important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;
